# worldparticle

./: README.md  pyproject.toml
tests/: test_worldparticle.py
worldparticle/: __init__.py  worldparticle.py
